--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -2,50 +2,85 @@
 <html lang="en">
     <head>
 		<meta charset="UTF-8"/>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
-		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Click em aan ouwe!!</title>
         <meta name="description" content="Click em aan ouwe Val Thorens fotoboek!"/>
         <meta name="keywords" content="click, val thorens, xavier, dennis, yves, edward, andre, anton, martijn, rianne, arjan, marije, erick, kim, rory"/>
         <meta name="author" content="Rory Zweistra"/>
-        <link rel="shortcut icon" href="favicon.ico"> 
-        <link rel="stylesheet" type="text/css" href="/css/style.css"/>
+        <link rel="shortcut icon" href="favicon.ico">
+        <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="http://blueimp.github.io/Gallery/css/blueimp-gallery.min.css">
+        <link rel="stylesheet" href="/css/bootstrap-image-gallery.min.css">
 		<!--[if lte IE 7]><style>.main{display:none;} .support-note .note-ie{display:block;}</style><![endif]-->
     </head>
     <body>
-        <div class="container">
-	
-            <a id="menulink" href="#">
-                <div class="hamburger-wrapper">
-                    <div class="inner-hamburger-wrapper">
-                        <img src="/images/camera_icon.png" width="60px" />
+
+        <!-- The Bootstrap Image Gallery lightbox, should be a child element of the document body -->
+        <div id="blueimp-gallery" class="blueimp-gallery">
+            <!-- The container for the modal slides -->
+            <div class="slides"></div>
+            <!-- Controls for the borderless lightbox -->
+            <h3 class="title"></h3>
+            <a class="prev">Ü</a>
+            <a class="next">Ý</a>
+            <a class="close">x</a>
+            <a class="play-pause"></a>
+            <ol class="indicator"></ol>
+            <!-- The modal dialog, which will be used to wrap the lightbox content -->
+            <div class="modal fade">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" aria-hidden="true">&times;</button>
+                            <h4 class="modal-title"></h4>
+                        </div>
+                        <div class="modal-body next"></div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default pull-left prev">
+                                <i class="glyphicon glyphicon-chevron-left"></i>
+                                Previous
+                            </button>
+                            <button type="button" class="btn btn-primary next">
+                                Next
+                                <i class="glyphicon glyphicon-chevron-right"></i>
+                            </button>
+                        </div>
                     </div>
                 </div>
-            </a>
-                
-            <div class="navigation-wrapper">
-                <h1>Photo uploaden</h1>
-                <div class="navigation">
-                    <ul>
-                        <li>
-                            Uploaden: 
-                            <form action="/upload" method="POST">
-                                <input type="file" name="photo" />
-                            </form>
-                        </li>
-                    </ul>
-                </div>
             </div>
-    		
-            <div class="clearfix"></div>
-            
-			<div class="main">
-				<% content %>
-			</div><!--/main-->
-		</div>        
-        
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-        <script src="/js/clickemaanouwe.js"></script>
-        
+        </div>
+
+        <div class="row-fluid">
+            <header>
+                <img src="/images/header.png" class="img-responsive center-block" />
+            </header>
+
+            <div class="main container">
+
+                <div class="upload-wrapper">
+                    <div class="upload">
+
+                        <h1>Photo Uploaden</h1>
+                        <form action="/upload" method="POST" enctype="multipart/form-data">
+                            <input type="file" name="file" />
+                            <button type="submit">Uploaden</button>
+                        </form>
+                    </div>
+                </div>
+
+                <% content %>
+            </div><!--/main-->
+
+            <footer>
+                <img src="/images/footer.jpg" class="img-responsive" />
+            </footer>
+        </div>
+
+
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+        <script src="http://blueimp.github.io/Gallery/js/jquery.blueimp-gallery.min.js"></script>
+        <script src="/js/bootstrap-image-gallery.min.js"></script>
+
 	</body>
 </html>
